syntax = "proto3";

package flow;

// The service definition.
service MetricsProto {
  // Sends metrics
  rpc SendMetrics (MetricsRequest) returns (MetricsReply) {}
}

// The request message.
message MetricsRequest {
  string message = 1;
}

// The response message.
message MetricsReply {
  string error = 1;
  string output = 2;
}
